test/types/enum/addEnumUint8.good
addEnumUint8.chpl:5: warning: uint(8)
addEnumUint8.chpl:6: warning: uint(8)
Note: This source location is a guess.
addEnumUint8.chpl:6: warning: uint(8)
addEnumUint8.chpl:7: error: unresolved call '+(E, 1)'
addEnumUint8.chpl:7: note: because call actual argument #1 with type E
note: and 102 other candidates, use --print-all-candidates to see them
(prediff deleted module lines)
